Add config reloading and perf improvements