@@ -9,7 +9,9 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Modifier;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import dev.kaooot.debugger.api.config.Config;
@@ -41,7 +43,39 @@ public class ConfigRegistry extends Registry<String, Config> {
     }
 
     public <T extends Config> T reload(Class<T> clazz) {
-        return this.load(clazz);
+        final String name = this.cache.get(clazz);
+        final Config current = name == null ? null : this.getValue(name);
+        final T reloaded = this.load(clazz);
+        if (current != null) {
+            this.copyFields(current, reloaded);
+            return clazz.cast(current);
+        }
+        return reloaded;
+    }
+
+    public void reloadAll() {
+        for (final Class<? extends Config> clazz : this.cache.keySet()) {
+            this.reload(clazz);
+        }
+    }
+
+    private void copyFields(Config target, Config source) {
+        Class<?> clazz = source.getClass();
+        while (clazz != null && clazz != Object.class) {
+            for (final Field field : clazz.getDeclaredFields()) {
+                final int modifiers = field.getModifiers();
+                if (Modifier.isStatic(modifiers) || Modifier.isFinal(modifiers)) {
+                    continue;
+                }
+                field.setAccessible(true);
+                try {
+                    field.set(target, field.get(source));
+                } catch (IllegalAccessException e) {
+                    e.printStackTrace();
+                }
+            }
+            clazz = clazz.getSuperclass();
+        }
     }
 
     public <T extends Config> T get(Class<T> clazz) {
@@ -61,8 +95,9 @@ public class ConfigRegistry extends Registry<String, Config> {
 
     private <T extends Config> T load(Class<T> clazz) {
         try {
-            return this.load(clazz, clazz.getConstructors()[0].newInstance());
-        } catch (InstantiationException | InvocationTargetException | IllegalAccessException e) {
+            return this.load(clazz, clazz.getConstructor().newInstance());
+        } catch (InstantiationException | InvocationTargetException | IllegalAccessException |
+                 NoSuchMethodException e) {
             throw new RuntimeException(e);
         }
     }
